<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" >

    <string name="description">"test"</string>
    <string name="skip_login">Skip Login</string>
    <string name="get_started">To get started, login using Facebook</string>
    <string name="settings">Settings</string>
    <string name="app_name">Grocer</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="search_menu">Search</string>
    <string name="search_item_hint">Search for item</string>
    <string name="search_location_hint">Set Location</string>
    <string name="search_button_label">Search</string>
    <string name="report_menu">Suggest a deal</string>
    <string name="grocery_list_menu">Grocery List</string>
    <string name="googlecards">Google cards example</string>
    <string name="share">Share</string>
    <string name="app_id">1393608100901845</string>
    <string name="url">http://grocer-app.herokuapp.com/groceryItem/add</string>
    <string name="search_no_results">No results found!</string>
    
    
    <string name="report_item">Item</string>
    <string name="report_price">Price</string>
    <string name="report_price_label">Price</string>
    <string name="report_quantity">Quantity</string>
    <string name="report_quantity_label">Quantity</string>
    <string name="report_units">Units</string>
    <string name="report_units_label">Units</string>
    <string name="report_unit_price">Unit Price</string>
    <string name="report_store_name">Store Name</string>
    <string name="report_store_street_address">Street Address</string>
    <string name="report_store_city">City</string>
    <string name="report_store_province">Province/State</string>
    <string name="report_store_country">Store Country</string>
    <string name="report_note">Note</string>
    <string name="report_submit">Submit</string>
    <string name="report_add_image">Add Image</string>

    
    <string name="itemdeleted">Item deleted</string>
    <string name="removeselected">Remove selected</string>
    <string name="taptoundo">Tap to undo</string>
    
    <string-array name="navigation_menu">
        <item>Search</item>
        <item>Suggest a deal</item>
        <item>Grocery list</item>
    </string-array>
    
    <string-array name="report_units_array">
        <item>N/A</item>
        <item>lb</item>
        <item>kg</item>
        <item>g</item>
        <item>ml</item>
        <item>L</item>
    </string-array>
    <string-array name="report_no_image_array">
        <item>TEST</item>
        <item>Take photo</item>
        <item>Select photo from Gallery</item>
    </string-array>
    <string-array name="report_with_image_array">
        <item></item>
        <item>Remove photo</item>
        <item>Take new photo</item>
        <item>Select new photo from Gallery</item>
    </string-array>

</resources>